docs: 更新API文档，增加鉴权参数
